--- a/doc_assets/css/style.css
+++ b/doc_assets/css/style.css
@@ -6,6 +6,7 @@
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   max-height: 640px;
+  overflow: auto;
 }
 
 .codeBlock pre {
